kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-search
  namespace: bryceFinal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-search
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: movie-search
    spec:
      containers:
      - name: movie-search
        image: brycecoon/msearch:${IMAGE_TAG}
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
