kube/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: movie-search-service
  namespace: bryce-final
spec:
  selector:
    app: movie-search
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
