kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-search-ingress
  namespace: bryceFinal
spec:
  rules:
  - host: moviesearch.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movie-search-service
            port:
              number: 80
